# Priority: Critical
# Test ID: C314
# Title: Login with Username and Password
# Expected Result: 
#  1. User is able to login with a valid Username and Password without 2FA or IP2FA blocked.

appId: co.edgesecure.app
---
- runFlow:
    file: ../common/launch.yaml
- runScript: ${../env.js}
- assertVisible: "Exit PIN"
- tapOn: 
    text: "Exit PIN"
    retryTapIfNoChange: false
- assertVisible: "Username"
- copyTextFrom: 
    id: usernameFormField
- assertTrue: ${output.C314.USERNAME === maestro.copiedText}
- tapOn: 
    id: passwordFormField
- inputText: ${output.C314.PASSWORD}
- pressKey: "Enter"
- tapOn: "Login"
- assertVisible: "BTC"