# Priority: Critical
# Test ID: C190284
# Title: Login from Edgy WiFi into an account created with 2FA enabled- Blocked 2FA
# Expected Result:
#   1. User is blocked and prevented from being able to login due to 2FA
#   2. Entering backup code correctly logs in
#   3. Able to see assets after logging in

appId: ${MAESTRO_APP_ID}
tags:
- all
- C190284
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_2FA_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_2FA_PASSWORD}

- extendedWaitUntil:
    visible: "Username and password are correct. This device cannot log in because\
    \ it does not have the right 2-factor code."
    timeout: 15000
- assertVisible: "Enter 2FA code"
- tapOn: "Enter 2FA code"
- inputText: ${MAESTRO_EDGE_2FA_BACKUP_CODE}
- assertVisible: "Submit"

# Workaround for keyboard autocomplete suggestion conflicts on some android screensizes
- hideKeyboard:
    optional: true

- tapOn:
    text: "Submit"
    optional: true

# If the request notifications modal show with "Security is Our Priority"
# Cancel it
- extendedWaitUntil:
    visible: "Security is Our Priority"
    timeout: 20000
    optional: true
- tapOn:
    text: "Cancel"
    optional: true

# Best effort: deny one request, deny all remaining requests, then deny one
# final request.
- extendedWaitUntil:
    visible: "A new device would like to log in to your account"
    timeout: 30000
    optional: true
- tapOn:
    id: "securityAlertDenyButton"
    optional: true
- extendedWaitUntil:
    notVisible:
      id: "securityAlertDenyButton.spinner"
    timeout: 20000
    optional: true
- tapOn:
    id: "securityAlertDenyAllButton"
    optional: true
- extendedWaitUntil:
    notVisible:
      id: "securityAlertDenyAllButton.spinner"
    timeout: 20000
    optional: true
- tapOn:
    id: "securityAlertDenyButton"
    optional: true
- extendedWaitUntil:
    notVisible:
      id: "securityAlertDenyButton.spinner"
    timeout: 20000
    optional: true
- tapOn:
    text: "SKIP"
    optional: true
- tapOn:
    text: "SKIP"
    optional: true

# Dismiss any remaining common modals and notifications.
- runFlow:
    file: ../common/dismiss-modals.yaml

- assertVisible: "Assets"
- tapOn: "Assets"
- assertVisible: "Wallets"

- stopApp
